alignment and table ui issue fixed (#18)
* browse file design

* table ui issue fixed

---------

--- a/src/app/components/authorized/project/project-components/project-component-elements/project-component-elements.component.scss
+++ b/src/app/components/authorized/project/project-components/project-component-elements/project-component-elements.component.scss
@@ -1,5 +1,4 @@
 table {
-    width: 99%;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    margin: 5px;
+    margin-bottom: 20px;
 }
+.mat-column-actions{width: 150px;}
